# ChangeLog for www-client/google-chrome-beta
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome-beta/ChangeLog,v 1.54 2014/11/13 02:38:57 floppym Exp $

*google-chrome-beta-39.0.2171.62_p1 (13 Nov 2014)

  13 Nov 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-beta-39.0.2171.62_p1.ebuild,
  -google-chrome-beta-39.0.2171.52_p1.ebuild:
  Automated update.

*google-chrome-beta-39.0.2171.52_p1 (06 Nov 2014)

  06 Nov 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-beta-39.0.2171.52_p1.ebuild,
  -google-chrome-beta-39.0.2171.42_p1.ebuild:
  Automated update.

*google-chrome-beta-39.0.2171.42_p1 (29 Oct 2014)

  29 Oct 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-beta-39.0.2171.42_p1.ebuild,
  -google-chrome-beta-39.0.2171.36_p1.ebuild:
  Automated update.

*google-chrome-beta-39.0.2171.36_p1 (23 Oct 2014)

  23 Oct 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-beta-39.0.2171.36_p1.ebuild,
  -google-chrome-beta-39.0.2171.27_p1.ebuild:
  Automated update.

*google-chrome-beta-39.0.2171.27_p1 (15 Oct 2014)

  15 Oct 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-beta-39.0.2171.27_p1.ebuild,
  -google-chrome-beta-39.0.2171.19_p1.ebuild:
  Automated update.

*google-chrome-beta-39.0.2171.19_p1 (10 Oct 2014)

  10 Oct 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-beta-39.0.2171.19_p1.ebuild,
  -google-chrome-beta-38.0.2125.101_p1.ebuild:
  Automated update.

  09 Oct 2014; Mike Gilbert <floppym@gentoo.org>
  google-chrome-beta-38.0.2125.101_p1.ebuild:
  Remove empty directories, bug 524868.

*google-chrome-beta-38.0.2125.101_p1 (01 Oct 2014)

  01 Oct 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-beta-38.0.2125.101_p1.ebuild,
  -google-chrome-beta-38.0.2125.77_p1.ebuild:
  Automated update.

*google-chrome-beta-38.0.2125.77_p1 (24 Sep 2014)

  24 Sep 2014; Mike Gilbert <floppym@gentoo.org>