@@ -1,15 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST google-chrome-beta_39.0.2171.62-1_amd64.deb 47908208 SHA256 84333199ebe6028e1a8248d877d3b475469334fef7cba70edbd4099efa104a62 SHA512 02860a5d463e5e232dd7a30b76dbe6a5b613ebba1dfa8bf882d1c98c350ab2abcb15a6b876ac39720919df3abdab5ebaed17a7fa339076973e24b3b4ad484af2 WHIRLPOOL bd67f175b1e932a7ce52b183efdba3a636ec84d57287c567639df98ed5c8282bede0afe36381aea60ac49027bdbd7d8a979d09f20cd403bcc2d144f2de980055
-DIST google-chrome-beta_39.0.2171.62-1_i386.deb 47379968 SHA256 8ba986ad2cf41a64998096d2a01a66befed5c8ceac0f38f756d9a07f02f48c61 SHA512 517594b42cf8cb74e369d88a2fa9afa286b718f78a680c2979ad24f2aa74e885fe7b752907c0bf884cecdabcd5793ee22f8e41ddee56053fdd464cbf77e1ba8f WHIRLPOOL 02ad4913f467007905d7eb32482ffc57506c8a39de24b6d3fc4128eaa8b27622de72bab6b508a96d299b3db363eca9b88d7dcb08a98cd8474f724a313e78b4f8
-EBUILD google-chrome-beta-39.0.2171.62_p1.ebuild 4425 SHA256 72bed71cc654c96a486a71e671a44f80febc309b663efa729105abd21d20f784 SHA512 26beb8efb6fa559253ce55d24379f5eff5b4ee8695cf29856b7a6d7511cec1940f516e68b71882a976656cef6572a202563bc640822ac8634cfe3587586ef9da WHIRLPOOL 927871ca7aa18aacc0a5c8b6571721511e147490f71849129bd4740e0a5004433f1fdfa702b2668d6332c1cd2797c4e51e48fea476ae5ad7a0ae080e82d8a5cb
-MISC ChangeLog 11139 SHA256 8ce4875d2401766920ef11e2dff6ee034d7398d52612f552bdb501de93d9e763 SHA512 4e93bc377ebccb7d09939e40f1198b93a92981fd28f8a32fe87453d305db80789f341d0479d04a1a13669fa7229426c0922b31b52ef7fb7cc20c70c128d784b8 WHIRLPOOL 8266b7a354227fcb888ad88ffe80e47898523455244c9ed8f7d1c85754b88e75b7d8fc77868e899e4fef24f304392dc3c5d557a4d1a648bbe8419066513aa4e8
+DIST google-chrome-beta_40.0.2214.10-1_amd64.deb 48616368 SHA256 486755dbd9bbb10a1302f7da41dfa59573a4d9f593c3545c73b56d83867f942d SHA512 63d6129c1f058dd37614f922aeda1d7edd629eab5953419564d2f1c7b0b3c3b5e9244b6cb119fa88cbdf0db7da1bd552ae35ce4bf8b6508e0ffd684e890c5f61 WHIRLPOOL 8bd6250be195d47e13279b00df9c20d0e710b925f37c1a9159cdc21c4ae87aa2c082757c6d2b0def30840ace77acbe4b4fc518e81c86005afd2c3558123bffde
+DIST google-chrome-beta_40.0.2214.10-1_i386.deb 48421302 SHA256 f627b4b12ce8460294dbe9e89ce309342ce647d3617c5d96cf198f76d2db2273 SHA512 3d09cea1e2130f234264dbab1b067f0c86d984cd3aaca3fcfc9c0524114253a9b15699da8add5dc9fcf8b5c0404b9f7f9b089739297791d491b89b819b6277d4 WHIRLPOOL df4e19ae3335f1ec1b9ae9554e01f1cf1f2a1d03369bbd30cf48032e69bbc94fdd8a95627e2d8084f2955475bfce458895be6c5d1500686884417233a33cdefd
+EBUILD google-chrome-beta-40.0.2214.10_p1.ebuild 4425 SHA256 906aa3dad2e13ac89a00fe63664e33b6ca39d0bc798bb60823b77258770ca4a2 SHA512 e24d1b10e118b24b321a7bb6374aceff1bca7d9ff1df639793aa6339f5392c7c2a5c693fe48593b74a9b6dab504a9b8876d189384bc353c453d47d79e6ceca7c WHIRLPOOL c3ad27064cfa41674b0d26e537c1b657e117bd63b496602f3f4411d39d9d8db828ced97d51efce1b287a5e89825da2540d73a6e3e345dc4a351fe9b395ac88e1
+MISC ChangeLog 11352 SHA256 fe3f43ee6dbf6a46b4e49a91c7abdd513a5cc168e224880ad4be5fe6fb19765b SHA512 625c0cf69409e6841f38f74a9563f2355e777de6640dbf90c493299575beeba814b4eaa67e776a82dd3770b8ccb6ed7f355e637a66e65aca2ff95a3a383d6694 WHIRLPOOL 795e7536195d961f885a6e1afcb6ebfa6092fcd46aa9daeb0bc67bc9e4a9ef79918fbeda46b394c7bfd38f442d468534da06b3a4bb6c1e9f7884d5c3bc17e81e
 MISC metadata.xml 600 SHA256 e3dffcb8db012d64e4dbb7df2566b800b2a9476aaf0447b1d40a6e94d2733806 SHA512 350bb629bee41ac320d1a870d3d7f34ead23edb1b7cf6ac6379363b01435015c58e249ba1375e9ed3b3023107ef5f3f29f646143a9e2622769923aa5fb21d846 WHIRLPOOL 05772be4e662813e5a0231e46d272931f0ccce9a13f7244ddda8a40e43e8d141293d0a70d4aa8b640ace773d3f68d663bd8cd4558f3bc3c65e5126834bf05129
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlRkGcIACgkQC77qH+pIQ6T9RAD9GA8grjC6J48lcQ3zRv2LI1dx
-mYweb1LkVA4GSudSiuMBAK6riHt4f51Hb2wOoAhJ7VoVnc0VpJ+28wDDDDSwlsse
-=yhsO
+iF4EAREIAAYFAlRvqFQACgkQC77qH+pIQ6TsYwD+MTS6AtAkkUKoK/jLXJs8Us5W
+j8410mQgBR/rSfuSC9QA/3ewHB7xRhsVB4e4GMbctaD/5ZSewIKVHrC6z9cN55wF
+=sFVA
 -----END PGP SIGNATURE-----
