@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome-unstable/google-chrome-unstable-40.0.2214.6_p1.ebuild,v 1.1 2014/11/14 03:32:27 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome-beta/google-chrome-beta-40.0.2214.10_p1.ebuild,v 1.1 2014/11/21 21:02:11 floppym Exp $
 
 EAPI="5"
 
