@@ -1,15 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST google-chrome-unstable_40.0.2214.6-1_amd64.deb 48872228 SHA256 120bbebaa04cca3cf47a0f8878f1bdda28d66e371083f3c81c1f52e597cad61a SHA512 782bd070b70629db321e52e7a2799608bda535516ba64ee6626f74e6a133e12f26a298aa9bcba02c952d550fa78d3f234ff791261db2f6f99b6ce2859de63236 WHIRLPOOL 69afcb7e900eac2bbfa07c0a5b1e64147d68027079d1800da58a7f6125b0ee754630fa8aac97d8d65cceecd55de28399e743c75870d91cad866b5b97c9bcf729
-DIST google-chrome-unstable_40.0.2214.6-1_i386.deb 48320240 SHA256 8a645744deecdd4cdb32eaca25a595a92bb692d85f8be2ad4a86d91aeed4c120 SHA512 dbf89a4921e94fc68e4029e3c873cf7f927a988669152802736ed6cfc3a337eb8656a4cb6d90d30854749414f84e264a7b4a5eccd9dd507d75d0cd3353b34de5 WHIRLPOOL 1551cbc5e217d31a5486cbfe4c75c18acfd86950d7eab4d4a1408ec5ab8b51509b33b0ab704b7b7c34412707c6755380226f46de6ef9d87fc83162e57306eabf
-EBUILD google-chrome-unstable-40.0.2214.6_p1.ebuild 4432 SHA256 f86d864582f2542cd00b8e7da57124af5143706fd587443d7cac526874e698fb SHA512 2a901495e502b70565df2970eee02ed87e445ac2eb5057ce970e167c679efc6990f0c07b0bb80e1908abd752788a22136b6824f8b775ad754d611627fd2ecec1 WHIRLPOOL 3124eabb325867f5b5e32aa12ac7481d0f624009bf5aea24da08c9122486a88d675cb160e024b4ccc3fefb5b9fcab80b71a0018c3993e1ea67832805413b5fa8
-MISC ChangeLog 14848 SHA256 901e07f79be4968553a5fe7e0af4ec9fcd86d73fe804639933c097af35aebc80 SHA512 d663f9de0a5fc29b70ea2292faa46598b5233645c3eb667c662a94a16cf5064795220a2916dbb0c35f7ed09263b14cf8b6afa297ea44dbd555533fab1e0256e7 WHIRLPOOL 0d2e9fd9e2bda6da3254720403e6c065459381889ecca2001851c9302bc38bac03d2e389e6a98c31c98a3a309ba69683fe5ed8cfac20910d2bee965ba616d2d4
+DIST google-chrome-unstable_41.0.2224.3-1_amd64.deb 49040406 SHA256 ee8bf205b4993a4e0ceca76896a4c359a5485cc24443c0b38da3778646955be3 SHA512 86dbc254413aef32449e2a150cf04f2a7a01db3b19c61a234163d933bdf6e67af4903d34c7807b2a46672fd73eabf0e3c17586bff5ae5fbabe52f498cb9918c7 WHIRLPOOL 7c5b174a2ca9f158df77a0131dbe3970db9ab7378620d61b14b98cb684f9ac77d3c42d46ff4514d858083fc9f3d199f13fdcf6a20d2e7ab577a46827ab3171ce
+DIST google-chrome-unstable_41.0.2224.3-1_i386.deb 48481544 SHA256 3320277f060750a6b92b9de86b142e03df464662139b7c320a634ee64f81cf9d SHA512 7f498dd75810206aae07f34ea542672018ce57ed2e1104138658aafae00342998f130e3ebbdca2dd1f0d62a1d118325d0f04d7e83383adea0058cc4ed101cfdc WHIRLPOOL c99891067bdee1f9fa2f50aed9b3312085d7422d6fcc556fd2f5a861ce43e04e6a68f2648cfd083f3acdaecd70c9f98ef982b53a55d59dd825553d22727eb136
+EBUILD google-chrome-unstable-41.0.2224.3_p1.ebuild 4432 SHA256 2d3d2d597ca2f06da782c4c7d8f5c7fa1617677a87d4e1b01000a73b2795979b SHA512 88c1151488624fac86ee76773fcaa462165b7c56b05e90555ab870d59873f7e6955da928c1a69e356d18df4e865c40d1a7f5d43bc7157ca2603270326c9ba724 WHIRLPOOL 8c53edbcd2728dcd712d478ffd4fce42250ba529bf9da21a878fe96e15c810b403bc71f691572d4f0b58e322713161a0957f02fbe26d55d44bbb30ca60c30553
+MISC ChangeLog 15070 SHA256 b2414af317ec2dd630e4a4cfcacc8d7c30cc8c89474a28fc9315a2b6fc492f77 SHA512 d92fd28e95cef0c6d5611de82636309b901dc7fa06f70937eed6b4bcb156879bc14dded4e2bf47128baa1e7c672dc54cf83aca7e7db88732baf9822a2e02f703 WHIRLPOOL 69ef7a7be1dcadc23eaa2e7de4250b5f0864b9d37853bee8fb5f0f347cfe7c5f4253622f5a8d118578e26b93584b19ed54361ed3eb4fc2fb8e7ff2d6b5d9b0aa
 MISC metadata.xml 600 SHA256 e3dffcb8db012d64e4dbb7df2566b800b2a9476aaf0447b1d40a6e94d2733806 SHA512 350bb629bee41ac320d1a870d3d7f34ead23edb1b7cf6ac6379363b01435015c58e249ba1375e9ed3b3023107ef5f3f29f646143a9e2622769923aa5fb21d846 WHIRLPOOL 05772be4e662813e5a0231e46d272931f0ccce9a13f7244ddda8a40e43e8d141293d0a70d4aa8b640ace773d3f68d663bd8cd4558f3bc3c65e5126834bf05129
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlRld9IACgkQC77qH+pIQ6Tz3gD/dbl0MnCU0YGpOABpRJWOtLbR
-0eF73DEWZ8iEHyZcFg8BAJqTwyLhBrpnhvupRMQrLfiRbY9qFEbGbqg3oBLBUymd
-=8xgV
+iF4EAREIAAYFAlRvqEgACgkQC77qH+pIQ6SdWwEAr8T0GqY+yBUer3bQ3TxhR2ah
+buMAE4Nkw2X079KLskYBAIF/dcw8hnNDPO1UR0dsgwO7ItfyfC7hnSX/nIW/nrBL
+=ykRY
 -----END PGP SIGNATURE-----
