@@ -1,15 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST google-chrome-stable_38.0.2125.122-1_amd64.deb 47810760 SHA256 ffbae1c45413ca7786a44830afccabd34fdcc7f0569fe1c48a055ac438cc9a0e SHA512 c6022bc706ee11d5643042e4908d4b46c1b8a3e17701b59110eb1cade3776059f43cdf4beb01c006157d21cd2276919db68f6e86bc4933daadc87e9cbfa245d3 WHIRLPOOL 565fea93b73c8b0661402734b2d5d52d82dd18297e77c7ef5430bd31a294fb48470ad3883172e80f09f587adbf6cbebf591beecff15eabcc7c6568cef9abdebc
-DIST google-chrome-stable_38.0.2125.122-1_i386.deb 47223654 SHA256 e43494364eb517f4cbffa11ece99c3a1dac38750d32a678b8cc59a2260b2b052 SHA512 b43bdd88403aba69d6ae836b0b240bf9a8c7f2a2df42ee0faf88b9744607230b0422e6c5544c97a540309daf38d1a5482f3f81cb8819b552d8444141dfe3fb7a WHIRLPOOL f16661d678ced5a669b2014c1374d7972c877fa6c3285ac82a4a65b6a92ba81bba969e8068abc3fa23c666d36bb381e153c7364c4a4d9096df90a59324c243c4
-EBUILD google-chrome-38.0.2125.122_p1.ebuild 4416 SHA256 a583a2d7102cd29cf310465a2155974d3ae3aa9d805398d08539f17757024c71 SHA512 994c5ed6838903d68dbe28cb23aca389cb00848f90b0fb1c011d0281486cf85da6f2013e6aae97fd6c9d78b732074cbdb268a7171fd74b113ba68a7706a1d190 WHIRLPOOL ab4c8077ec5070651ece282e0ba6bc8d909fc1626a3b93b4709f158e7afcaf88fa3d442a225188d52230795fc20baab64d798ecde8aaa9c474601b3b8c9aea9a
-MISC ChangeLog 93745 SHA256 fe17cdf912c15604eabb22d4f9e28e5c7571c667231bbc8bb285eac0dce29711 SHA512 0edac9afbf4a526dfd5b2d3e851fe7ba1abaa7fa264199f2775729295228f5cd73ca5d460bdbcf1b4e4504849693d413d0f39932f33c3829aef635b18da70298 WHIRLPOOL 86340f844459eb0b7f3c43e35e2e0b89d7c9a8de145a44c063446345d49e17ca0cb0323baff26fb8f85042c115e6d5c1ea3a7a2b23b6f0ced583b240dd02d8fe
+DIST google-chrome-stable_39.0.2171.65-1_amd64.deb 47976878 SHA256 e7848a312bafa86a43b4f89667ba22f1bf82e8f996d9a4e83101507bbb1eb0bf SHA512 0e6cce23d7fb394bfbcbecdb0aa87c1e4114bc5d9d3c303aba5a5d3a7d14db89aea52935e3633acf4b23f5886510325edcfa981560f4180d9c382754acfe45d0 WHIRLPOOL ebb311e8c523d953f4ea7b8292d8ea1a122014f79d3781f632db3db3a59322e0e3e8edae2f65561eec8c109c4ff07cfb1e0541d98861b2159dcc9e2265ea2035
+DIST google-chrome-stable_39.0.2171.65-1_i386.deb 47465446 SHA256 512e4004344cdf289b61100e869b2d3cc28e0c36676a8f5c510df12d0c891fc7 SHA512 f9c2fada28e98130f4aab9f5c5cb71431e63436824429983890043c4eb4761abff97e749b37af062932289ca978dc6bcc98d9611a88f236a47fc8ee9d5f0860e WHIRLPOOL 3dd86185f0b6fd2c53626eaf1c14be8b21c7caab88c3bd0d290d9915e17ebfae5416e226032dcdda8b43ad41099a13e4a6b899aa2153d44db0009f821331ac0e
+EBUILD google-chrome-39.0.2171.65_p1.ebuild 4415 SHA256 8a29d2ea7c935e052ab4d9820ac189f3281c2b7d833d40b0ec83022bfeea94a5 SHA512 fb09f6ec31d96d09b48e7e30b6f379927de6148a300accc4371fb8babc67a87a42730cfd000a52ccbb784e22681144d298cae6878882d968169e931c02a3ac83 WHIRLPOOL 29a698f31734c2fca676a8cca58ad2e497e353a794441a5f72ed79fc50661858c31565c8f1c3296a0f490e746fa3f2fd023fb8d30575236aa4804e33a3eedafe
+MISC ChangeLog 93942 SHA256 eb031b4880322f8398cc9d713de819a945fa208c507dff49b2695c6a329688ef SHA512 883a3272b53ddb903a918a5ba39a12702075a024bf2d51ef19ccfd3030327b3c828af104c6c8b486d0cc095d0263936625cb13e459a8230302a62f62ecb4ef8c WHIRLPOOL 3c034ce2c632d72a37a7d2e1bbe48f1c3d77babfc571148a3bdb89d1af9a2397cdcfbec50856e07d0def7f9923530da3c2e90534e4396fae2cc73518e0a9dce3
 MISC metadata.xml 600 SHA256 e3dffcb8db012d64e4dbb7df2566b800b2a9476aaf0447b1d40a6e94d2733806 SHA512 350bb629bee41ac320d1a870d3d7f34ead23edb1b7cf6ac6379363b01435015c58e249ba1375e9ed3b3023107ef5f3f29f646143a9e2622769923aa5fb21d846 WHIRLPOOL 05772be4e662813e5a0231e46d272931f0ccce9a13f7244ddda8a40e43e8d141293d0a70d4aa8b640ace773d3f68d663bd8cd4558f3bc3c65e5126834bf05129
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlRjf6IACgkQC77qH+pIQ6QAwwD+KtNzoIGLJk4kYgQAkjmi+U83
-L5ZnOJP0JZF31/WxqdcA/RCKzmFeHnVqmelwwfhYVUH5HkQGAGbdOfwfFVxLadOb
-=ZHlg
+iF4EAREIAAYFAlRvqGAACgkQC77qH+pIQ6RGSAEAvKMBb8Hi88EBtc4wO1twPx0E
+Dd23MLxHR1sWFymB4dYA/3ia71fFEy6dYgfKxVf3nURCKI6cUY/OjlkdUG3pQaZZ
+=dSM9
 -----END PGP SIGNATURE-----
