@@ -1,6 +1,13 @@
 # ChangeLog for www-client/google-chrome-unstable
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome-unstable/ChangeLog,v 1.69 2014/11/14 03:32:27 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome-unstable/ChangeLog,v 1.70 2014/11/21 21:01:59 floppym Exp $
+
+*google-chrome-unstable-41.0.2224.3_p1 (21 Nov 2014)
+
+  21 Nov 2014; Mike Gilbert <floppym@gentoo.org>
+  +google-chrome-unstable-41.0.2224.3_p1.ebuild,
+  -google-chrome-unstable-40.0.2214.6_p1.ebuild:
+  Automated update.
 
 *google-chrome-unstable-40.0.2214.6_p1 (14 Nov 2014)
 
