@@ -1,6 +1,12 @@
 # ChangeLog for www-client/google-chrome
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.392 2014/11/12 15:41:20 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.393 2014/11/21 21:02:23 floppym Exp $
+
+*google-chrome-39.0.2171.65_p1 (21 Nov 2014)
+
+  21 Nov 2014; Mike Gilbert <floppym@gentoo.org>
+  +google-chrome-39.0.2171.65_p1.ebuild, -google-chrome-38.0.2125.122_p1.ebuild:
+  Automated update.
 
 *google-chrome-38.0.2125.122_p1 (12 Nov 2014)
 
