@@ -1,6 +1,13 @@
 # ChangeLog for www-client/google-chrome-beta
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome-beta/ChangeLog,v 1.54 2014/11/13 02:38:57 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome-beta/ChangeLog,v 1.55 2014/11/21 21:02:11 floppym Exp $
+
+*google-chrome-beta-40.0.2214.10_p1 (21 Nov 2014)
+
+  21 Nov 2014; Mike Gilbert <floppym@gentoo.org>
+  +google-chrome-beta-40.0.2214.10_p1.ebuild,
+  -google-chrome-beta-39.0.2171.62_p1.ebuild:
+  Automated update.
 
 *google-chrome-beta-39.0.2171.62_p1 (13 Nov 2014)
 
